fixed mobile horizontal scroll

--- a/public/src/css/upsolidaria.css
+++ b/public/src/css/upsolidaria.css
@@ -17,6 +17,10 @@ body {
 	.navbar-header{padding: 0 15px 15px 15px;}
 }
 
+.navbar>.container>.navbar-header, .navbar>.container>#navbar{
+	margin: 0;
+}
+
 /***************************************************************************/
 
 
